mediawiki.ui: checkbox: Correct alignment of long labels
Use display: table-cell; to display the checkbox and the label
side-by-side. I am honestly surprised that this works here. Not sure
if it's a good idea to use… although we successfully did it for
OOjs UI in 2498265b, but we have more control over everything there.

Bug: T85241

--- a/resources/src/mediawiki.ui/components/checkbox.less
+++ b/resources/src/mediawiki.ui/components/checkbox.less
@@ -39,7 +39,7 @@
 .mw-ui-checkbox:not(#noop) {
 	// Position relatively so we can make use of absolute pseudo elements
 	position: relative;
-	line-height: @checkboxSize;
+	display: table;
 
 	* {
 		// reset font sizes (see bug 72727)
@@ -58,6 +58,11 @@
 		max-width: none;
 		margin: 0;
 		margin-right: 0.4em;
+		display: table-cell;
+
+		& + label {
+			display: table-cell;
+		}
 
 		// the pseudo before element of the label after the checkbox now looks like a checkbox
 		& + label::before {
@@ -70,8 +75,12 @@
 			border-radius: @borderRadius;
 			width: @checkboxSize;
 			height: @checkboxSize;
+			line-height: @checkboxSize;
 			background-color: #fff;
 			border: 1px solid @colorGray7;
+			// align the checkbox to middle of the text
+			top: 50%;
+			margin-top: -1em;
 			.background-image-svg('images/checked.svg', 'images/checked.png');
 			.background-size( @checkboxSize - 0.2em, @checkboxSize - 0.2em );
 			background-repeat: no-repeat;
